Prevent Home link stretching beyond bounds

--- a/src/assets/custom/css/_sass/_website-navigation.scss
+++ b/src/assets/custom/css/_sass/_website-navigation.scss
@@ -28,7 +28,7 @@
 
 .website-navigation__home-link {
   @include small-and-medium {
-    display: block;
+    display: inline-block;
   }
   @include small {
     height: 17px;
